--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="container">
     <section class="section hero">
      <div class="hero-avatar">
-       <img src="c:\1700925\profilexiao.jpg" alt="Mac Xiaobin Villacrusis">
+       <img src="profilexiao.jpg" alt="Mac Xiaobin Villacrusis">
      </div>
       <div class="hero-content">
         <h2 class="hero-name">Mac Xiaobin Villacrusis <span class="verified-badge" title="Verified on Facebook">
@@ -981,4 +981,5 @@
     chatInput.onkeypress = (e) => { if (e.key === 'Enter') send(); };
   </script>
 </body>
+
 </html>
