--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="container">
     <section class="section hero">
      <div class="hero-avatar">
-       <img src="profilexiao.jpg" alt="Mac Xiaobin Villacrusis">
+       <img src="c:\1700925\profilexiao.jpg" alt="Mac Xiaobin Villacrusis">
      </div>
       <div class="hero-content">
         <h2 class="hero-name">Mac Xiaobin Villacrusis <span class="verified-badge" title="Verified on Facebook">
@@ -57,7 +57,7 @@
       <h3 class="section-title">💼 About</h3>
       <p class="about-text">I'm a full-stack software engineer specializing in developing solutions with HTML, CSS, JavaScript, Python, and PHP. I work on projects including building modern web applications, mobile apps, search engine optimization, digital marketing.</p>
       <p class="about-text"> I Graduated from University of Batangas with a degree in Bachelor of Science in Computer Engineering.</p>
-      <p class="about-text">Lately, I've been into the world of artificial intelligence, focusing on integrating AI tools and techniques into modern applications. My work now includes developing AI-powered solutions, creating intelligent applications, and generative AI to optimize development workflows and deliver cutting-edge technology.</p>
+      <p class="about-text">I specialized Software Engineering and Advanced Machine Learning. My work now includes developing AI-powered solutions, creating intelligent applications, and generative AI to optimize development workflows and deliver cutting-edge technology.</p>
     </section>
 
     <section id="experience" class="section">
@@ -981,5 +981,4 @@
     chatInput.onkeypress = (e) => { if (e.key === 'Enter') send(); };
   </script>
 </body>
-
 </html>
