--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
       proj: "Xiao developed the Gigahertz Web, part of BASE404 (coding bootcamp), developer of CodeCrev (AI wardrobe assistant), and DYNAMIS (AI workout tracker).",
       edu: "Xiao holds a BS in Computer Engineering from the University of Batangas (2026).",
       ach: "Xiao is a DICT Web Development and part of CodeCrev a community of over 200,000 developers.",
-      contact: "You can reach Xiao via email at macxiaobin0517@gmail.com or schedule a call through the website."
+      contact: "You can reach Xiao via email at macxiaobin0517@gmail.com or schedule a call through his personal number or check his socials in the web below ."
     };
 
     function genResp(inp) {
