--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
           <a href="https://base-404.com" class="project-link">base-404.com →</a>
         </div>
         <div class="project-card">
-          <h4 class="project-title">DIIN.PH</h4>
-          <p class="project-description">AI-powered wardrobe assistant</p>
-          <a href="https://diin.ph" class="project-link">diin.ph →</a>
+          <h4 class="project-title">Chatime.ph</h4>
+          <p class="project-description">Chatime System Web</p>
+          <a href="https://chatime.com.ph" class="project-link">Chatime.ph →</a>
         </div>
         <div class="project-card">
-          <h4 class="project-title">DYNAMIS Workout Tracker</h4>
-          <p class="project-description">AI-powered workout tracker</p>
-          <a href="https://dynamis-app.online" class="project-link">dynamis-app.online →</a>
+          <h4 class="project-title">Gigahertz</h4>
+          <p class="project-description">Gigahertz System Web</p>
+          <a href="https://www.gigahertz.com.ph" class="project-link">Gigahertz.ph →</a>
         </div>
       </div>
     </section>
@@ -982,5 +982,6 @@
   </script>
 </body>
 </html>
+
 
 
