--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="container">
     <section class="section hero">
      <div class="hero-avatar">
-       <img src="profilexiao.jpg" alt="Mac Xiaobin Villacrusis">
+       <img src="c:\1700925\profilexiao.jpg" alt="Mac Xiaobin Villacrusis">
      </div>
       <div class="hero-content">
         <h2 class="hero-name">Mac Xiaobin Villacrusis <span class="verified-badge" title="Verified on Facebook">
@@ -214,7 +214,7 @@
         <p class="recommendation-text">"I was just a K-12 undergrad with zero coding experience, but with the guidance of my good friend Xiao, I was able to learn and grow exponentially. His mentorship helped me to develop a strong foundation in programming, and I'm now a full-stack developer working freelance..."</p>
         <div>
           <div class="recommendation-author">Aironn Datinguinoo</div>
-          <div class="recommendation-title">Full-stack Developer, Freelance</div>
+          <div class="recommendation-title">BPI Full-stack Developer, Freelance</div>
         </div>
       </div>
     </section>
@@ -982,6 +982,3 @@
   </script>
 </body>
 </html>
-
-
-
